# DebateAI

./: .gitignore  README.md  docker-compose.yml
docs/: IMPLEMENTATION_PLAN.md  architecture.drawio
exp/: test_backend.py
frontend/src/context/: ThemeContext.tsx
notebooks/: 0.0-quick-checks.ipynb  1.0-load-data-sm-faiss.ipynb  1.0-load-data-sm.ipynb  1.0-load-data.ipynb  1.1-questions-genetics.ipynb  1.2-text-from-pdf.ipynb  1.3-RAG.ipynb  1.4-Cheese-RAG.ipynb  2.0-ask-questions-hugchat.ipynb  2.1-debate-setup-hugchat.ipynb  2.2-test-open-ai-key.ipynb  3.0-medfaq-retrival-augmented-generation-challenges.ipynb
server/: config.py  constants.py  main.py  pyproject.toml
server/agents/: __init__.py  base.py  debate_agent.py  manager.py  topic_generator.py
server/api/: __init__.py  debate.py  models.py  topics.py  upload.py
server/ingest/: ingester.py
server/rag/: __init__.py  pipeline.py  retriever.py  weaviate_client.py
server/services/: __init__.py  debate_service.py  upload_service.py
server/views/: chat.py  process.py  root.py
