[tool.poetry]
name = "book-rag"
version = "0.0.1"
description = "A RAG based chatbot for querying books and generating fan fiction."
authors = ["Anurag <19914954+shenoy-anurag@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.12.9"
fastapi = {extras = ["standard"], version = "^0.115.11"}
weaviate-client = "^4.11.1"
langchain-weaviate = "^0.0.4"
ipykernel = "^6.29.5"
langchain = "^0.3.19"
langchain-community = "^0.3.18"
pypdf = "^5.3.0"
langchain-ollama = "^0.2.3"
jq = "^1.8.0"
websockets = "^15.0"
hugchat = "^0.4.18"
langchain-openai = "^0.3.7"
faiss-cpu = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
